clusters/appref-view/scripts/templates/config/default-auth-server.yaml
#@ load("@ytt:data", "data")

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-auth-server
  namespace: service-instances
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-contour-cluster-issuer
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: default-auth-server-tls
    hosts:
    - #@ "default-auth." + data.values.clusters.tap_gui.appref2.baseUrl
  rules:
  - host: #@ "default-auth." + data.values.clusters.tap_gui.appref2.baseUrl
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
           name: default-auth-server
           port:
             number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: default-auth-server
  namespace: service-instances
  annotations:
    kapp.k14s.io/disable-default-label-scoping-rules: ""
spec:
  selector:
    app.kubernetes.io/part-of: default-auth-server
    app.kubernetes.io/component: authorization-server
  ports:
    - port: 80
      targetPort: 8080
